# neural-network

./: .gitignore  Makefile  Readme  Readme.md  main.cpp  meson.build
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
builddir/meson-info/: intro-buildsystem_files.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt  testlog.json  testlog.junit.xml  testlog.txt
builddir/meson-private/: coredata.dat.prev
builddir/src/: MNT
builddir/test/: matrix_test  network_test
include/tqdm/: tqdm.h  utils.h
src/: Matrix.cpp  Matrix.hpp  Network.cpp  Network.cpp.old  Network.hpp  main.cpp  meson.build  mnist_reader.cpp  mnist_reader.hpp
test/: Matrix_test.cpp  Network_test.cpp  meson.build
